name:              WebInterface
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Baker
maintainer:        Michael Baker
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://WebInterface.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Move
                     GameState
                     Valuable
                     Board
                     Token
                     Tree
                     Minimax

    ghc-options: -static -Wall -threaded -O0
    hs-source-dirs: ., src

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

executable         WebInterface
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -static -Wall -threaded -O2
    else
        ghc-options:   -static -Wall -threaded -O0

    hs-source-dirs: ., src

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod-json                    >= 0.2        && < 0.3
                 , yesod-core                    >= 0.9.3      && < 0.10
                 , yesod-static                  >= 0.3.1      && < 0.4
                 , yesod-default                 >= 0.4        && < 0.5
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-text              >= 0.10       && < 0.11
                 , wai                           >= 0.4.2      && < 0.5
                 , transformers                  >= 0.2        && < 0.3
